@@ -15,15 +15,13 @@ namespace khmer
 {
 
 
+#ifdef WITH_INTERNAL_TRACING
 TraceLogger::
 TraceLogger( uint8_t const level, FILE * stream_handle )
-#ifdef WITH_INTERNAL_TRACING
 : _level( level ), _shared_stream( true ), _stream_handle( stream_handle )
 {
     assert( NULL != stream_handle );
 }
-#else
-{ }
 #endif
 
 
